# popsift

./: .clang-format  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_deps  LICENSE.md  README.md  TEST.sh  TODO.txt  appveyor.yml  cudaInstallAppveyor.cmd
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question_help.md
.github/workflows/: continuous-integration.yml
cmake/: ChooseCudaCC.cmake  Config.cmake.in  FindPopsift.cmake  FindSphinx.cmake  sift_config.h.in  version.hpp.in
doc/: CMakeLists.txt
doc/sphinx/: requirements.txt
doc/sphinx/source/: Doxyfile  biblio.bib  bibliography.rst  conf.py  index.rst
doc/sphinx/source/about/: about.rst
doc/sphinx/source/api/: api.rst  usage.rst
doc/sphinx/source/install/: install.rst
flann-1.9.1/examples/: flann_example.c
msvc_build/: msvc_build.sln
msvc_build/lsh_evaluation/: CDCoversPreprocessor.cpp  Distance.cpp  KDTree.cpp  KDTree.h  Query.cpp  Query.h  SiftBench.cpp  SiftBench.h  TexMexBench.cpp  dataio.cpp  dataio.h  lsh.cpp  lsh.h  lsh_evaluation.vcxproj  lsh_evaluation.vcxproj.filters  main.cpp
popsift/: CALLME.txt  CMakeLists.txt  README.txt
popsift/application/: CMakeLists.txt  main.cpp
popsift/common/: c_util.h  c_util.hpp  c_util_getopt.h  c_util_img.cpp  c_util_img.hpp  c_util_stopwatch.cpp  c_util_stopwatch.hpp  cl_util.hpp  cl_util_drvapi.hpp  cuda_util.hpp  debug_macros.cpp  debug_macros.h  debug_macros.hpp  device_prop.cpp  plane_2d.cu  plane_2d.h  write_plane_2d.cu  write_plane_2d.h
popsift/playground/: Makefile  try-array.cu  try-filters.cpp  try-gauss-interpolate.cpp  try-gauss.cpp  try-texture-compare.cu
popsift/sift/: assist.h  s_extrema_v6.cu  s_sigma.h  sift_pyramid.h
popsift/src/: SIFT.cu  SIFT.h  SIFT.hpp  UML  align_macro.h  assist.cu  gauss_filter.cu  gauss_filter.h  keep_time.cu  keep_time.hpp  popsift.cu  s_desc.v1.cu  s_extrema.v4.cu  s_extrema.v4.h  s_extrema_v4.cu  s_extrema_v5.cu  s_extrema_v6.cu  s_gradiant.h  s_image.cu  s_image.h  s_image.hpp  s_image_upv1.cu  s_image_upv2.cu  s_image_upv3.cu  s_image_upv4.cu  s_image_upv5.cu  s_ori.v1.cu  s_ori.v1.h  s_ori.v2.cu  s_ori.v2.h  s_pyramid.cu  s_pyramid.h  s_pyramid.hpp  s_pyramid.v6.h  s_pyramid.v7.h  s_pyramid.v8.h  s_pyramid_v11.cu  s_pyramid_v12.cu  s_pyramid_v6.cu  s_pyramid_v7.cu  (+15 more)
sample/: flickr_osl_winter_1280x960.ppm  img2.ppm  lena.ppm  level0.ppm  level0even.ppm  level1.ppm
src/: CMakeLists.txt  LICENSE.txt
src/Cuda-7.0-cub/cub/: util_ptx.cuh
src/application/: CMakeLists.txt  c_util_img.cpp  c_util_img.h  common_opt.cpp  common_opt.h  main.cpp  match.cpp  pgmread.cpp  pgmread.h  register.cpp  test_radix_sort.cpp
src/cgtuebingen_pqt/: CMakeLists.txt  LICENSE  README.md  tool_createdb.cpp  tool_query.cpp
src/cgtuebingen_pqt/pqt/: PerturbationProTree.cu  PerturbationProTree.hh  ProQuantization.cu  ProQuantization.hh  ProTree.cu  ProTree.hh  ProductQuantization.cu  ProductQuantization.hh  VectorQuantization.cu  VectorQuantization.hh  bitonicSort.cu  bitonicSort.cuh  helper.cu  helper.hh  sortingNetworks_common.cuh  sortingNetworks_common.h  triangle.cuh
src/cgtuebingen_pqt/utils/: arr.hpp  filereader.hpp  helper.hpp  timer.hpp
src/cmake/: Config.cmake.in  FindCUDA.cmake
src/common/: c_util.cpp  c_util_img.cpp  clamp.h  debug_macros.cpp  debug_macros.h  device_prop.cpp  device_prop.h  excl_blk_prefix_sum.h  plane_2d.h  warp_bitonic_sort.h  write_plane_2d.cu  write_plane_2d.h
src/compareSiftFiles/: CMakeLists.txt  compareSiftFiles.cpp  csf_feat.cpp  csf_feat.h  csf_options.cpp  csf_options.h
src/playground/: CMakeLists.txt  Makefile  bitosort.cu  compare-float-dump.cc  matrix_invert.cc  try-array.cu  try-gauss-interpolate.cpp  try-gauss-param.cpp  try-gauss.cpp  try-prefix-sum.cu  try-shfl.cu  try-sort.cu
src/popsift/: assist.h  clamp.h  cpu_matching.cpp  cpu_matching.cu  features.cu  features.h  features_lbg.cu  features_lbg.h  filtergrid.cu  filtergrid.h  filtergrid_debug.cu  filtergrid_debug.h  gauss_filter.cu  gauss_filter.h  initial_extremum.h  lock.h  popsift.cpp  popsift.cu  popsift.h  registration.cu  registration.h  s_desc_grid.cu  s_desc_grid.h  s_desc_igrid.cu  s_desc_igrid.h  s_desc_iloop.cu  s_desc_iloop.h  s_desc_loop.cu  s_desc_loop.h  s_desc_norm_l2.h  s_desc_norm_rs.h  s_desc_normalize.h  s_desc_notile.cu  s_desc_notile.h  s_desc_vlfeat.cu  s_desc_vlfeat.h  s_extrema.cu  s_filtergrid.cu  s_gradiant.h  s_gradiant_cuda9plus.h  (+34 more)
src/popsift/common/: assist.cu  assist.h  clamp.h  cublas_init.cu  cublas_init.h  cublas_matrix.cu  cublas_matrix.h  debug_macros.cpp  debug_macros.cu  debug_macros.h  device_prop.cpp  device_prop.cu  device_prop.h  excl_blk_prefix_sum.h  nppi_error_strings.cu  nppi_error_strings.h  plane_2d.cu  plane_2d.h  sync_queue.h  vec_macros.h  warp_bitonic_sort.h  write_plane_2d.cu  write_plane_2d.h
src/popsift/match/: match_brute_blas.cu  match_brute_blas.h  match_brute_force.cu  match_brute_force.h  match_task.cu  match_task.h
src/popsift/register/: reg_job.cu  reg_job.h  reg_task.cu  reg_task.h  registration.cu  registration.h
src/popsift/regression/: bitosort.h  test_radix_sort.cu  test_radix_sort.h
src/sift/: assist.cu  assist.h  clamp.h  gauss_filter.cu  gauss_filter.h  keep_time.cu  popsift.cu  popsift.h  s_desc.v1.cu  s_extrema.cu  s_extrema_v6.cu  s_gradiant.h  s_image.cu  s_image.h  s_image_upv5.cu  s_ori.v1.cu  s_orientation.cu  s_pyramid_build.cu  s_solve.h  sift_conf.cu  sift_conf.h  sift_constants.cu  sift_constants.h  sift_desc.cu  sift_extrema_mgmt.cu  sift_extrema_mgmt.h  sift_extremum.h  sift_octave.cu  sift_octave.h  sift_pyramid.cu  sift_pyramid.h  sift_pyramid_v11.cu
testScripts/: CMakeLists.txt  TEST.sh  TEST.sh.in  compareSiftFiles.cpp  compareWithVLFeat.sh  compute.awk  downloadOxfordDataset.sh.in  testOxfordDataset.sh.in
testScripts/CompareDescriptors/: CMakeLists.txt  Compare.mk.in  compareWithVLFeat.sh.in
testScripts/compareVersions/: CMakeLists.txt  Compare.mk.in  compareWithVLFeat.sh.in
testScripts/compareVersions/awk/: desc-to-heat.awk
(+9 files in other folders)
